Handle message from url query for testing purpose

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,7 @@
     {{ super() }}
 {% endblock %}
 {% block content %}
-    Content
+    history: {{ history }}
+    <br><br><br>
+    response: {{ response }}
 {% endblock %}
