--- a/templates/cv_summary.html
+++ b/templates/cv_summary.html
@@ -6,5 +6,7 @@
     {{ super() }}
 {% endblock %}
 {% block content %}
-    {{ content }}
+    {% autoescape false %}
+    {{content}}
+    {% endautoescape %}
 {% endblock %}
